yaml_configs/immich/09-immich-server-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: immich-server
  namespace: immich
  labels:
    app: immich-server
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: immich-server
  template:
    metadata:
      labels:
        app: immich-server
      annotations:
        k8s.v1.cni.cncf.io/networks: |
          [{
            "name": "multus-iot",
            "namespace": "default",
            "mac": "2e:f8:57:99:6e:31",
            "ips": ["192.168.1.192/24"]
          }]
    spec:
      securityContext:
        fsGroup: 0
      serviceAccountName: default
      dnsPolicy: ClusterFirst
      containers:
        - name: immich-server
          image: "ghcr.io/immich-app/immich-server:release"
          imagePullPolicy: Always
          securityContext:
            runAsUser: 0
          ports:
            - containerPort: 3001
          livenessProbe:
            failureThreshold: 120
            httpGet:
              path: /server-info/ping
              port: 3001
            initialDelaySeconds: 0
            periodSeconds: 120
            timeoutSeconds: 1
          readinessProbe:
            failureThreshold: 120
            httpGet:
              path: /server-info/ping
              port: 3001
            initialDelaySeconds: 0
            periodSeconds: 120
            timeoutSeconds: 1
          volumeMounts:
            - name: library
              mountPath: /usr/src/app/upload
              subPath: library
            - name: ext-library
              mountPath: /photos
              subPath: icloud_photos
            - name: nas-photos
              mountPath: /nas-photos
          resources:
              requests:
                memory: "1024Mi"
                cpu: "1000m"
              limits:
                memory: "3096Mi"
                cpu: "4"
      volumes:
        - name: library
          persistentVolumeClaim:
            claimName: immich-library-pvc
        - name: ext-library
          persistentVolumeClaim:
            claimName: nas-icloud-photos-pvc
        - name: nas-photos
          persistentVolumeClaim:
            claimName: nas-photos-pvc
