yaml_configs/immich/15-immich-cloudflare-tunnel.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudflare-immich
  namespace: immich
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cloudflare-immich
  template:
    metadata:
      labels:
        app: cloudflare-immich
        name: cloudflare-immich
    spec:
      containers:
        - name: cloudflare-immich
          image: cloudflare/cloudflared:latest
          imagePullPolicy: Always
          args:
            - "tunnel"
            - "--no-autoupdate"
            - "run"
            - "--token"
            - "$(CLOUDFLARE_TOKEN)"  # Use environment variable
