yaml_configs/immich/11-immich-db-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: immich-database
  namespace: immich
  labels:
    app: immich-database
spec:
  type: ClusterIP
  selector:
    app: immich-database
  ports:
    - name: tcp-postgresql
      port: 5432
      targetPort: 5432
